--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 	<head>
         <meta charset="UTF-8"> 
-        <title>A&N | Anasayfa</title>
+        <title>A&N</title>
 
         <link rel="stylesheet" href="css/style.css">
 
@@ -20,7 +20,7 @@
             <nav>
                 <a href="#anasayfa">Anasayfa</a>
                 <a href="#aysil">Ayşıl</a>
-                <a href="#neyk">Neyk</a>
+                <a href="#neyk">Nehir</a>
                 <a href="#biz">Ekip</a>
                 <a href="#iletisim">İletişim</a>
                     
