--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#anasayfa">Anasayfa</a>
                 <a href="#aysil">Ayşıl</a>
                 <a href="#neyk">Nehir</a>
-                <a href="#biz">Ekip</a>
+                <a href="#biz">Biz</a>
                 <a href="#iletisim">İletişim</a>
                     
             </nav>
