--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div id="sag">
                     <span>B</span>
                     <p id="psag">
-                        en Nehir Yılmaz 16 yaşındayım Boğaziçi MTAL de okuyorum. Kod yazmayı, tığ yazmayı, bir şeyler almayı seviyorum. Ayşılı seviyorum.
+                        en Nehir Yılmaz 16 yaşındayım Boğaziçi MTAL de okuyorum. Kod yazmayı, tığ yapmayı, bir şeyler almayı seviyorum. Ayşılı seviyorum.
                     </p>
                 </div>
             </div>
