--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="sutun-orta">
-                    <img src="img/tavsik.png">
+                    <img src="img/tavsik.png" width="100%">
                 </div>
                 <div class="sutun-sag">
                     <img src="img/aysil.png" alt="" class="img-fluid oval">
